# sysrag

./: .gitignore  README.md  docker-compose.yml  flask_app.py  pyproject.toml  test.ipynb
notebooks/: embeddings.joblib  naive_rag_with_together_ai.ipynb  rag_with_together_ai.ipynb  rag_with_weaviate.ipynb  test.ipynb
src/utils/: formatting.py  rag_core.py  rag_weaviate_core.py
