[project]
name = "sysrag"
version = "0.1.0"
description = ""
authors = [
    {name = "Berkani",email = "berkaniimad48@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (==2.2.6)",
    "pandas (==2.3.0)",
    "python-dateutil (==2.9.0.post0)",
    "sentence-transformers (==5.0.0)",
    "joblib (==1.5.1)",
    "scikit-learn (==1.7.0)",
    "requests (==2.32.4)",
    "together (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^7.2.0"

